Full js implementation & logic
Created an array of objects. Each object - 1 to-do.
Array loads with every home page call and updates with every to-do user
change.

--- a/css/notes.css
+++ b/css/notes.css
@@ -1,5 +1,5 @@
-.page-content-no-padding-top {
-  padding-top: 0 !important;
+.page-content-less-padding-top {
+  padding-top: 40px !important;
 }
 
 .left-arrow {
